--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -7,10 +7,15 @@
     "start": "cross-env NODE_ENV=dev nodemon --exec babel-node src/index.js",
     "prettier": "prettier --single-quote --print-width 80 --trailing-comma all --write 'src/**/*.js'"
   },
+  "keywords": [
+    "Pet",
+    "LovePet"
+  ],
   "author": "Eric Torres Andrade <erictorresandrade.1@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "apollo-server-express": "^1.3.2",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
     "cross-env": "^5.1.3",
     "express": "^4.16.2",
@@ -19,6 +24,7 @@
     "graphql-date": "^1.0.3",
     "graphql-subscriptions": "^0.5.6",
     "graphql-tools": "^2.15.0",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.0-rc0",
     "sequelize": "^4.28.6"
   },
