--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -22,19 +22,19 @@
     "faker": "^4.1.0",
     "graphql": "^0.12.3",
     "graphql-date": "^1.0.3",
-    "graphql-subscriptions": "^0.5.6",
-    "graphql-tools": "^2.15.0",
-    "jsonwebtoken": "^8.1.1",
-    "mongoose": "^5.0.0-rc0",
-    "sequelize": "^4.28.6"
+    "graphql-subscriptions": "^0.5.8",
+    "graphql-tools": "^2.21.0",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.8",
+    "sequelize": "^4.35.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "eslint": "^4.14.0",
-    "eslint-config-equimper": "^2.2.1",
+    "eslint": "^4.18.2",
+    "eslint-config-equimper": "^2.2.2",
     "eslint-config-prettier": "^2.9.0",
-    "prettier": "^1.9.2"
+    "prettier": "^1.11.1"
   }
 }
