--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -17,6 +17,7 @@
     "apollo-server-express": "^1.3.2",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "cross-env": "^5.1.3",
     "express": "^4.16.2",
     "faker": "^4.1.0",
