--- a/backend/Pet/package.json
+++ b/backend/Pet/package.json
@@ -17,11 +17,16 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.11",
     "apollo-link-http": "^1.5.14",
+    "compression": "^1.7.4",
     "cookie": "^0.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "formik": "^1.5.7",
     "graphql": "^14.3.1",
+    "helmet": "^3.18.0",
     "isomorphic-unfetch": "^3.0.0",
+    "lru-cache": "^5.1.1",
     "next": "^8.1.0",
     "next-routes": "^1.4.2",
     "node-sass": "^4.12.0",
