--- a/backend/Pet/package.json
+++ b/backend/Pet/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
-    "apollo-boost": "^0.4.1",
+    "apollo-boost": "^0.4.3",
     "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.11",
     "apollo-link-http": "^1.5.14",
@@ -27,23 +27,25 @@
     "helmet": "^3.18.0",
     "isomorphic-unfetch": "^3.0.0",
     "lru-cache": "^5.1.1",
-    "next": "^8.1.0",
+    "next": "8.1.0",
+    "next-offline": "^4.0.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.3.1"
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.3.0",
     "@graphql-codegen/typescript": "^1.3.0",
-    "@graphql-codegen/typescript-operations": "^1.3.0",
+    "@graphql-codegen/typescript-operations": "^1.4.0",
     "@graphql-codegen/typescript-react-apollo": "^1.3.0",
     "@types/cookie": "^0.3.2",
     "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.0",
-    "@types/next": "^8.0.5",
+    "@types/next": "^8.0.6",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.0.11",
     "@types/styled-components": "^4.1.16",
